k8s/svc/svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-deployment
  labels:
    app: svc-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-deployment
  template:
    metadata:
      labels:
        app: svc-deployment
    spec:
      affinity:
        # Working like daemonset: 1 pod per node
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - svc-deployment
              topologyKey: kubernetes.io/hostname
      containers:
      - name: svc-deployment
        image: dgkmaster/ubuntu-pcl:latest
        ports:
        - containerPort: 8081
