k8s/svc/svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: dgk.io
      http:
        paths:
          - path: /svc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: svc-service
                port:
                  number: 8081
